# PSPL_DAQ

./: .gitmodules  README.md  TODO.MD  heater.py  list_devices.py  pyproject.toml
P&IDS/: P&ID.json
autosequences/: QDs.py  abort.py  autosequence_example.py  autosequence_test.py  clock.py  cold_flow_auto.py  cold_flow_no_purge.py  command.py  constants.py  hot_fire_auto.py  hot_fire_auto_runner.py  main_auto.py  tc_auto_test.py  valve_checks.py  valve_config.json
clock_autosequences/: camerastest.py  clock.py  clock_abort.py  clock_hotfire_auto.py
clock_server/: server.py
clock_server/templates/: index.html
configs/: main.py  main_v2.py  ni_configuration.py  processing.py
daq_system/: README.md  __init__.py  main.py  reuirements.txt
daq_system/autosequences/: abort.py  valve_checks.py
daq_system/autosequences (legacy)/: cold_flow_no_purge.py  hot_fire_auto.py  pressurization.py
daq_system/clock_autosequences/: CMS_Avionics_Channels.xlsx  clock.py  clock_abort.py  command.py  (+5 more)
harbor/: harbor_abort.py  harbor_pump_auto.py  harbor_regulate.py  test.py  valve_sim.py
instrumentation/: CMS_Master_Control_Wiring_Dev5.xlsx  CMS_Master_Data_Wiring_Dev5_3_31.xlsx  CMS_Master_Data_Wiring_Dev6.xlsx  ~$CMS_Master_Data_Wiring_Dev5_3_31.xlsx
schematics/: Automatic Control System Interface 11-17-25.json  Autosequence Control Panel.json  BCLS Master 11-17-25.json  BCLS Master 9-12-25.json  BCLS_MASTER.json  CMS_MASTER.json  I dont want to make this schematic again without channels.json  QD_MASTER.json  ROCKET_MASTER.json  Secondary Control Panel 9-17-25.json
(+52 files in other folders)
